--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.1",
     "axios": "^1.7.9",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.4",
+    "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
